--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,21 @@
 nav {  
     display: flex;
     justify-content: space-around; 
-    padding-top: 30px;
-    
+    padding-top: 30px;    
     background-color: #00082F; 
     box-shadow:  7px 7px 10px rgba(75, 74, 74, 0.5);  
     box-shadow:  0px 0px 30px rgba(68, 68, 68, 0.7);
-       .n_info {
+    .n_info {
         max-width: 700px;
         margin-top:20px ;
+        .nav_foto_smart{ 
+            display: none;          
+            text-align: center;
+            img {
+                max-width: 250px;
+            }
+            
+        }
                 
         .nav_text{
             font-size: 12px;
@@ -71,8 +78,7 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    .header_title {        
-        width: 500px;
+    .header_title {     
         padding: 70px 0 40px 0;
         margin: 0 auto;
         text-align: center;
@@ -105,10 +111,8 @@ header {
 }
 
 /*footer*/
-
 footer {
-    background-color: #00082F; 
-    min-height: 500px;
+    background-color: #00082F;     
     box-shadow:  0px 0px 30px rgba(68, 68, 68, 0.7);    
 }
 .footer_title {
